--- a/css/lightpick.css
+++ b/css/lightpick.css
@@ -107,6 +107,12 @@
     font-size: 12px;
 }
 
+.lightpick__previous-action[disabled],
+.lightpick__next-action[disabled] {
+    cursor: not-allowed;
+    opacity: 0.8;
+}
+
 .lightpick__close-action {
     font-size: 18px;
 }
